--- a/src/components/SocialCard.css
+++ b/src/components/SocialCard.css
@@ -54,12 +54,12 @@
 .social-card-embed-tiktok {
   position: relative;
   width: 100%;
-  min-height: 540px;
+  min-height: 740px;
 }
 
 .social-card-embed-tiktok iframe {
   width: 100%;
-  min-height: 540px;
+  min-height: 740px;
   border: 0;
   display: block;
 }
